Steganography image uploaded

--- a/Blogs.html
+++ b/Blogs.html
@@ -31,11 +31,11 @@
 
                 <!-- <div = class="text_lhs">Lorem ipsum dolor.</div><br /> -->
 
-                <div = class="text_lhs"> Whilst I enjoy reading blogs, I am less keen on writing them.
-
+                <div = class="text_lhs"> <i>Wise men speak because they have something to say; Fools because they have to say something.</i> - Plato. 
+                    
                     <br /><br />
 
-                    So, here are a few of that caught my eye.
+                    So whilst I enjoy reading blogs, I am less keen on writing them. So, here are a few of that caught my eye.
 
                     <ul>
                         <li></li>
