--- a/Projects.html
+++ b/Projects.html
@@ -35,6 +35,8 @@
 
                     <br /><br />
 
+                    But I have a very, very, very, cunning plan.
+
                     <ul>
                         <li></li>
                         <li></li>
