--- a/Tech.html
+++ b/Tech.html
@@ -72,6 +72,10 @@
 
 
                 <div = class="FW">
+                    How can you tell if someone uses Arch Linux? Don't worry, they will tell you.
+                    
+                    <br /><br />
+
                     Lorem ipsum dolor...
                 </div>
 
