--- a/Tech.html
+++ b/Tech.html
@@ -79,7 +79,7 @@
                         <a href="https://www.mongodb.com/">
                         <img src="http://whatpixel.com/images/2017/05/00-mongodb-logo.jpg" width="100%";/> 
                         </a>
-                        <figcaption></figcaption>
+                        <figcaption>MongDB</figcaption>
                     </div>
 
                     <div = class="spreadtext-img">
