--- a/error.html
+++ b/error.html
@@ -35,7 +35,7 @@
                     
                     <br />
 
-                    <h2><b><i>Still searching...</i></b></h2>
+                    <h2><b><i>Contradiction error</i></b></h2>
                     
                     <br />
 
