First complete draft

--- a/Blogs.html
+++ b/Blogs.html
@@ -63,7 +63,7 @@
                         <li>Copy in the following text to your terminal, push space, but DO NOT hit enter: <em>steghide extract -sf</em></li>
                         <li>Drag and drop the downloaded image location to the terminal, and push space</li>
                         <li>Add the following text to the end of the text: <em>-p mikerocks</em></li>
-                        <li>The complete command adjusted for the filepath on your PC should look like this: <em>steghide extract -sf '/home/flash/Desktop/Hidden-text.JPG' -p mikerocks</em></li>
+                        <li>The complete command adjusted for the filepath on your PC should look like this: </br><em>steghide extract -sf '/home/flash/Desktop/Hidden-text.JPG' -p mikerocks</em></li>
                         <li>Hit enter then open the freshly extracted text file from the pwd location.</li>
                     </ol>
 
@@ -88,6 +88,8 @@
                     <p>In this hilarious vlog, Derek from the Distrotube channel explains several ways in which Linux still cannot hold a candle to the
                         market leading operating system.</p>
 
+                    <p>Highlights include spyware support, tight trojan integration, and pre-installed keyloggers.</p>
+
                 </div>
 
             </article>
@@ -108,6 +110,8 @@
                 <div = class=centred-text> 
 
                 <h3>Ipsum Lorum </h3>
+
+                <p>I have a very, very, very cunning plan.</p>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
