--- a/error.html
+++ b/error.html
@@ -35,7 +35,7 @@
                     
                     <br />
 
-                    <h2><b><i>This page has intentionally been left blank.</i></b></h2>
+                    <h2><b><i>Only joking!</i></b></h2>
                     
                     <br />
 
