--- a/Projects.html
+++ b/Projects.html
@@ -17,7 +17,7 @@
 
             <menu>
 
-                <p>    <a href="Home.html">        Home        </a>    </p>
+                <p>    <a href="index.html">        Home        </a>    </p>
                 <p>    <a href="Tech.html">        Technology  </a>    </p>
                 <p>    <a href="Projects.html">    Projects    </a>    </p>
                 <p>    <a href="Blogs.html">       Blogs       </a>    </p>
