--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Chicle&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="guru.css">
+        <link rel="stylesheet" type="text/css" href="guru.css" integrity="sha384-YJT713bzMF0MbiagPaW0Yf2q29FuHL+qLEvTAZWDfvQb3RHHHteZm1e4UTswmJnR">
         <title>Error</title>
     </head>
 
@@ -17,7 +17,7 @@
 
             <menu>
 
-                <p>    <a href="Home.html">        Home        </a>    </p>
+                <p>    <a href="index.html">        Home        </a>    </p>
                 <p>    <a href="Tech.html">        Technology  </a>    </p>
                 <p>    <a href="Projects.html">    Projects    </a>    </p>
                 <p>    <a href="Blogs.html">       Blogs       </a>    </p>
